--- a/RogueArena/RogueArena.csproj
+++ b/RogueArena/RogueArena.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <MonoGameContentReference Include="**\*.mgcb" />
+  </ItemGroup>
+
+  <ItemGroup>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.7.0.1708" />
+    <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SadConsole" Version="8.6.0" />
   </ItemGroup>
