--- a/RogueArena/RogueArena.csproj
+++ b/RogueArena/RogueArena.csproj
@@ -6,6 +6,7 @@
     <OutputType>WinExe</OutputType>
     <StartupObject>RogueArena.Program</StartupObject>
     <UseWPF>true</UseWPF>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
