--- a/RogueArena/RogueArena.csproj
+++ b/RogueArena/RogueArena.csproj
@@ -7,6 +7,7 @@
     <StartupObject>RogueArena.Program</StartupObject>
     <UseWPF>true</UseWPF>
     <PublishSingleFile>true</PublishSingleFile>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
