--- a/RogueArena.Tests/RogueArena.Tests.csproj
+++ b/RogueArena.Tests/RogueArena.Tests.csproj
@@ -11,5 +11,9 @@
     <DotNetCliToolReference Include="Fixie.Console" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RogueArena\RogueArena.csproj" />
+  </ItemGroup>
+
 
 </Project>
